# blindtest-ultimate

./: .env  .gitignore  Cargo.toml  Makefile  README.md  blindtest.db  requirements.txt
.github/workflows/: ci.yml  main.yml  rust.yml
app/: auth.py  database.py  main.py  models.py  schemas.py
app/routes/: auth.py  deezer.py  playlists.py  songs.py  users.py  websockets.py
app/services/: rooms.py
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: environment.ts  index.html  main.ts  styles.scss
frontend/src/app/: app.component.spec.ts  app.component.ts  app.routes.ts
frontend/src/app/components/navbar/: navbar.component.html  navbar.component.scss  navbar.component.ts
frontend/src/app/components/playlist/: playlist.component.html  playlist.component.scss  playlist.component.ts
frontend/src/app/components/room/: room.component.html  room.component.ts
frontend/src/app/pages/home/: home.component.html  home.component.scss  home.component.ts
frontend/src/app/pages/login/: login.component.html  login.component.scss  login.component.ts
frontend/src/app/pages/profile/: profile.component.html  profile.component.ts
frontend/src/app/pages/register/: register.component.html  register.component.scss  register.component.ts
frontend/src/app/services/: auth.service.ts  user.service.ts  websocket.service.ts
src/: config.rs  lib.rs  main.rs
src/db/: users.rs
src/models/: user.rs
src/routes/: mod.rs  users.rs
tests/: integration_tests.rs  test_auth.py  test_deezer.py  test_hash.py  test_main.py  test_users.py
