[package]
name = "blindtest"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"

[lib]
name = "blindtest"
path = "src/lib.rs"
